2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: added in function "get_group_agents" the
	parameter "$childGroups" for get the child groups. And in the function
	"get_user_groups" added the parameter "$id_groups" for to get groups. Add
	the function "get_id_groups_recursive" for to get groups in the tree groups.
	 
	* godmode/reporting/visual_console_builder.wizard.php: fixed the select box
	of agents when user have agents in subgroup in any subgroup in the tree
	group.
	
	Fixes: #3180902

2011-02-21 Javier Lanz <javier.lanz@artica.es>

	* godmode/alerts/alert_templates.php: Truncated Group name
	* godmode/alerts/alert_actions.php: Truncated Group name

2011-02-21  Ramon Novoa  <rnovoa@artica.es>

	* godmode/massive/massive_edit_agents.php: Check for false instead of
	  the number of updated agents.

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/alerts/alert_list.builder.php: added the conditional to hide the
	create template or action when the user haven't privileges for this action.
	
	Fixes: #3182535

2011-02-21  Ramon Novoa  <rnovoa@artica.es>

	* operation/agentes/alerts_status.php: Fixed ACL check for alerts.

2011-02-19  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/configurar_agente.php: Fixed bad layout when
	length of agent name is more than 25.
	
2011-02-18 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php, operation/search_modules.php,
	operation/search_agents.php: sorry, I didn't think about the subgroups may
	have other subgroups (and this may be recursive), rewrite the SQL for
	search with groups, now the groups come from the PHP function to get
	all groups, children groups, grandchildren groups...

2011-02-18 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php, operation/search_modules.php,
	operation/search_agents.php: fixed SQL querys, this querys in previous
	version haven't lines SQL code for to search into subgroups.
